app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/devops-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: REDIS_DB
              value: "0"
            - name: REDIS_HOST
              value: redis
            - name: REDIS_PASSWORD
              value: test
            - name: REDIS_PORT
              value: "10000"
            - name: GIN_MODE
              value: release
            - name: APP_PORT
              value: "8080"
          name: app
          image: dhanakane/devops_app:experimental
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
